--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.0",
     "@nestjs/graphql": "12.0.3",
+    "@nestjs/jwt": "10.1.0",
     "@nestjs/mongoose": "10.0.0",
+    "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
     "dotenv": "16.3.1",
     "graphql": "16.7.1",
     "mongoose": "7.3.1",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
@@ -41,6 +46,7 @@
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
+    "@types/passport-local": "1.0.35",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@typescript-eslint/parser": "5.59.11",
