--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/mongoose": "10.0.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
+    "bcrypt": "5.1.0",
     "dotenv": "16.3.1",
     "graphql": "16.7.1",
     "mongoose": "7.3.1",
