--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 MONGODB_URI= PUT HERE THE URI OF MONGODB ATLAS
 DB_NAME= PUT HERE THE NAME OF THE DATABASE
+OPENAI_API_KEY= PUT HERE THE KEY OF OPENAI
