--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "16.3.1",
     "graphql": "16.7.1",
     "mongoose": "7.3.1",
+    "openai": "^3.3.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
